implmenting phase 7.5 api name normailze
